# roblox-punishment-api

./: .env  .env.example  .gitignore  Cargo.toml  DATABASE.md  ENDPOINTS.md  README.md  release.db
migrations/2024-01-10-111330_Bans/: down.sql  up.sql
migrations/2024-03-21-103630_logs/: up.sql
src/: error.rs  main.rs  models.rs  schema.rs
